# HexaArchCli

./: .gitignore  DESIGN-v0.5.md  README.md  pyproject.toml
docs/: PHASE-CONTEXT.md
examples/seoul-apt/: domain-spec.yaml  policy.md
examples/seoul-apt/reference/.arch/: import-rules.toml
examples/seoul-apt/reference/src/composition/: wiring.py
examples/seoul-apt/reference/src/contexts/collection/adapters/: in_memory.py
examples/seoul-apt/reference/src/contexts/collection/application/: run_collection.py
examples/seoul-apt/reference/src/contexts/collection/domain/: collection_job.py  collection_state.py  exceptions.py  records.py
examples/seoul-apt/reference/src/contexts/collection/ports/: ports_out.py
examples/seoul-apt/reference/src/contexts/collection/requirements/: REQUIREMENTS.md
examples/seoul-apt/reference/src/contexts/regulation/adapters/: csv_loader.py
examples/seoul-apt/reference/src/contexts/regulation/domain/: decision_table.py  exceptions.py
examples/seoul-apt/reference/src/shared/: money.py
examples/seoul-apt/reference/tests/: fakes.py  test_boundary.py  test_collection.py  test_gate_guard.py  test_gate_with_real_regulation.py  test_invariants.py  test_regulation.py  test_transitions.py
hexaarch/: __init__.py  check.py  cli.py  extract.py  gate.py  scaffold.py  select_arch.py  spec.py
hexaarch/llm/: __init__.py  base.py  claude_session.py
tests/: test_check.py  test_decision_table.py  test_extract.py  test_field.py  test_gate.py  test_polish.py  test_scaffold.py  test_select_arch.py  test_spec.py  test_web.py
(+14 files in other folders)
